# lucy-ng

./: CLAUDE.md  README.md  outlsd.out  pyproject.toml
.claude/agents/: supervisor.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SESSION-HANDOFF-2026-01-09.md  STATE.md  config.json  skill-analysis.md
.planning/milestones/: v1.0-ROADMAP.md  v1.1-ROADMAP.md  v5.0-ROADMAP.md  v6.0-MILESTONE-AUDIT.md  v6.0-REQUIREMENTS.md  v6.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02.1-1d-carbon-dereplication-nmrshiftdb/: 01-02.1-PLAN.md  01-02.1-SUMMARY.md
.planning/phases/05-lsd-integration/: 01-05-PLAN.md  01-05-SUMMARY.md
.planning/phases/08-hose-predictor/: 01-08-PLAN.md  01-08-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK-v3.0-statistical-detection.md  STACK-v3.0.md  STACK.md  SUMMARY.md
background/: sherlock-analysis.md
commands/lucy-ng/: dereplicate.md
docs/: AI_GUIDE.md  INSTALLATION.md  MCP_INTEGRATION.md  USER_GUIDE.md
skill/: SKILL.md
skill/CASE/: SKILL.md
skill/dereplicate/: SKILL.md
skill/diagnostic/: SKILL.md
skill/sanitize/: SKILL.md
skill/supervisor/: SKILL.md
src/lucy_ng/: __init__.py
src/lucy_ng/cli/: lsd.py  (+7 more)
tests/: test_bruker_reader.py  test_cli_database.py  test_cli_dereplicate.py  test_cli_lsd.py  test_cli_main.py  test_cli_pick.py  test_database.py  test_dept_guided_picker.py  test_detection_neighbours.py  test_fragment_searcher.py  test_hmbc_guided_picker.py  test_hose_stats_generator.py  test_lsd_analyzer.py  test_lsd_generator.py  test_lsd_grouping_syntax.py  test_lsd_integration.py  test_lsd_models.py  test_lsd_parser.py  test_lsd_runner.py  test_nmrglue_integration.py  test_peak_picker_2d.py  test_ranking.py  test_signal_grouping.py  test_stats_generator_hybridisation.py  test_symmetry_analysis.py  test_visualization.py
(+137 files in other folders)
