[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucy-ng"
version = "0.1.0"
description = "AI-agent powered Computer-Assisted Structure Elucidation for organic natural products"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Christoph Steinbeck" }
]
keywords = ["nmr", "chemistry", "structure-elucidation", "case", "natural-products"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "click>=8.0",
    "nmrglue>=0.9",
    "numpy>=1.24",
    "pydantic>=2.0",
    "rdkit>=2023.0",
    "scipy>=1.10",
    "tqdm>=4.0",
    "hosegen @ git+https://github.com/Ratsemaat/HOSE_code_generator.git",
]

[project.scripts]
lucy = "lucy_ng.cli:cli"
lucy-mcp = "lucy_ng.mcp:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
mcp = [
    "mcp[cli]>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lucy_ng"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["lucy_ng"]
mypy_path = "src"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
